--- a/Pali/index.html
+++ b/Pali/index.html
@@ -25,7 +25,7 @@
                 Palindrome Finder
             </h1>
         
-            <div class="col px-5">
+            <div class="px-5">
                 <label class="d-block w-100 fs-3 text-warning mb-3" for="palindrome">Insert a Word</label>
                 <input class="d-block w-100 rounded-2 lh-lg form-control border-black" type="text" id="palindrome" placeholder="Inserisci la parola da analizzare">
             </div>
